# ETL-TO-INSIGHTS

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
analytics/queries/: 01_active_headcount.sql  02_turnover_trend.sql  03_avg_tenure_by_dept.sql  04_avg_working_hours.sql  05_late_arrival_frequency.sql  06_early_departure_count.sql  07_total_overtime_count.sql  08_rolling_avg_hours.sql  09_early_attrition_rate.sql  10_kpi_attendance_consolidated.sql
api/auth/: dependencies.py  jwt.py
api/routes/: __init__.py  auth.py  employees.py  kpis.py  timesheets.py
api/schemas/: __init__.py  employee.py  timesheet.py
config/: settings.yaml
data/raw/: employee_202510161125.csv  timesheet_202510161124.csv
db/: __init__.py  base.py  init.sql  models_auth.py  models_bronze.py  models_gold.py  models_silver.py
db/migrations/: env.py
db/migrations/versions/: 00a797489564_create_bronze_tables.py  16bc36f51270_create_silver_tables.py  (+2 more)
etl/: pipeline.py
etl/export/: exporter.py
etl/extract/: extractor.py
etl/postprocess/: __init__.py  postprocessor.py
etl/quality/: checker.py
etl/transform/: transformer.py
logs/: quality_report_20260226_234609.json  quality_report_20260226_235637.json  quality_report_20260227_143316.json  quality_report_20260301_000415.json  quality_report_20260301_165538.json  quality_report_20260301_170440.json  quality_report_20260301_183241.json
tests/: test_api_auth.py  test_extractor.py  test_postprocessor.py  test_transformer.py
visualizations/: charts.py
