[project]
name = "etl-to-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "black>=26.1.0",
    "boto3>=1.42.52",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "pandas>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "prefect>=3.6.17",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
